--- a/_posts/2017-07-11-lush.markdown
+++ b/_posts/2017-07-11-lush.markdown
@@ -1,8 +1,9 @@
 ---
-layout: default
+layout: single_post
 title: "Lush"
 date: 2017-07-11
 tags: dev lush
+excerpt: "Lush is a new Unix shell I've been working on. It is based off using Racket as its scripting language."
 ---
 
 ![Fizzbuzz screenshot](/images/blogposts/fizzbuzz.png)
